# project_books_data_engineer

./: .gitignore  ERD  README.md  analyze.py  app_soup2.py  app_soup3.py  automatiza_airflow.py  clean.py  clean_data.py  conection_db.py  create_tables.py  livros.csv  livros3.csv  livros33.csv  pyproject.toml  save_cleaned_to_dw.py  save_data_to_csv.py  save_data_to_mongodb.py  save_to_dw.py  scraping_data.py  send_to_dw.py  sql  transform_data.py
Analise_simples/: SWEETVIZ_REPORT.html  base.html  top5.html  top5p.html
Clean&Analise(Part+)/Reports/: osComMelhorPreco.html
Notebook/: clean.ipynb
Old/: app_soup.py  livro.csv  otherVersioncodeRefatored.md  otherversioncodeworking.py
Reports/: base.html
Reports HTML/: classificacao_geral.html  df3.html  ordenada_classificacao .html  ordenada_preco.html  top_5.html
WebScraping( Part 1)/: README.md  conection.py  conection_db.py  extractData.py  livros.csv  save_data_to_csv.py
WebScraping( Part 1)/Old/: app_soup2.py
raw/: livros.csv
transformed_data/: livros_t.csv
