[tool.poetry]
name = "bsscrapy"
version = "0.1.0"
description = ""
authors = ["jumozaga <jumozaga@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
pymongo = "^4.3.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
